[package]
name = "ssl-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
hickory-resolver = "0.24"
instant-acme = { version = "0.8.5", features = ["rcgen"] }
percent-encoding = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Security_Cryptography"] }
x509-parser = "0.18"
