[package]
name = "ssl-renew-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ssl-renew-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ssl-core = { path = "../ssl-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
