[package]
name = "ssl-signer-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ssl-signer-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ssl-core = { path = "../ssl-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
